feat: Implement user authentication with Prisma, PostgreSQL and infra configuration
